@@ -9,6 +9,7 @@ Changes - List of significant changes to Devel::NYTProf
 =head2 Changes in Devel::NYTProf 4.06 (svn XXX) XXX
 
   Improved handling of Class::MOP/Moose generated methods.
+  Improved handling of embedded filenames, e.g., "(eval N)[$path]"
   Added note to the docs re profiling applications that use Coro.
   Clarified usecputime=1 docs.
   Updated tests for new functionality in Sub::Name 0.06.
